[package]
name = "demod"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Thomas Karpiniec <tom.karpiniec@outlook.com"]
publish = false

[dependencies]
m17core = { path = "../m17core" }
m17app = { path = "../m17app" }
m17codec2 = { path = "../m17codec2" }

env_logger = "0.11.6"
log = "0.4.22"
