[package]
name = "m17app"
version = "0.1.0"
edition = "2021"
keywords = ["amateur", "radio", "m17", "ham"]
license = "MIT"
authors = ["Thomas Karpiniec <tom.karpiniec@outlook.com"]
repository = "https://code.octet-stream.net/m17rt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m17core = { path = "../m17core" }
log = "0.4.22"
