[package]
name = "m17codec2"
version = "0.1.0"
edition = "2021"
keywords = ["amateur", "radio", "m17", "ham"]
license = "MIT"
authors = ["Thomas Karpiniec <tom.karpiniec@outlook.com"]
description = "M17 digital radio - codec2 stream adapters"
homepage = "https://octet-stream.net/p/m17rt/"
repository = "https://code.octet-stream.net/m17rt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec2 = "0.3.0"
cpal = "0.15.3"
hound = "3.5.1"
m17core = { version = "0.1", path = "../m17core" }
m17app = { version = "0.1", path = "../m17app" }
log = "0.4.22"
rubato = { version = "0.16.2", "default-features" = false }
thiserror = "2.0.11"
