[package]
name = "m17core"
version = "0.1.0"
edition = "2024"
keywords = ["amateur", "radio", "m17", "ham", "no_std"]
license = "MIT"
authors = ["Thomas Karpiniec <tom.karpiniec@outlook.com"]
repository = "https://code.octet-stream.net/m17rt"
description = "M17 digital radio - core protocol definitions, modem, TNC, and KISS"
homepage = "https://octet-stream.net/p/m17rt/"
readme = "README.md"

[dependencies]
cai_golay = "0.1.1"
crc = "3.2.1"
log = "0.4.22"
